@@ -140,6 +140,9 @@ public:
 	 */
 	CEGUI::Window* getWindow(const std::string& windowName);
 	
+	
+	const std::string& getLayoutDir() const;
+	
 protected:
 
 	
