@@ -13,6 +13,10 @@
 #ifndef __BINRELOC_C__
 #define __BINRELOC_C__
 
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif
+
 #ifdef ENABLE_BINRELOC
 	#include <sys/types.h>
 	#include <sys/stat.h>
